--- a/5-Classes/5-Classes/nbproject/project.properties
+++ b/5-Classes/5-Classes/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Soccer.jar
+dist.jar=${dist.dir}/5-Classes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Soccer
+dist.jlink.output=${dist.jlink.dir}/5-Classes
 excludes=
 includes=**
 jar.compress=false
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=14
-javac.target=14
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Soccer
-main.class=soccer.Soccer
+jlink.launcher.name=5-Classes
+main.class=pkg5.classes.Classes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
