--- a/7_ArrayList/nbproject/project.properties
+++ b/7_ArrayList/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Soccer.jar
+dist.jar=${dist.dir}/7_ArrayList.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Soccer
+dist.jlink.output=${dist.jlink.dir}/7_ArrayList
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Soccer
-main.class=soccer.Soccer
+jlink.launcher.name=7_ArrayList
+main.class=pkg7_arraylist.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
