--- a/All stars soccer practice lab/nbproject/project.properties
+++ b/All stars soccer practice lab/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Soccer.jar
+dist.jar=${dist.dir}/All_stars_soccer_practice_lab.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Soccer
+dist.jlink.output=${dist.jlink.dir}/All_stars_soccer_practice_lab
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Soccer
-main.class=soccer.Soccer
+jlink.launcher.name=All_stars_soccer_practice_lab
+main.class=all.stars.soccer.practice.lab.AllStarsSoccerPracticeLab
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
