--- a/JavaApplication15/nbproject/project.properties
+++ b/JavaApplication15/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Soccer.jar
+dist.jar=${dist.dir}/JavaApplication15.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Soccer
+dist.jlink.output=${dist.jlink.dir}/JavaApplication15
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Soccer
-main.class=soccer.Soccer
+jlink.launcher.name=JavaApplication15
+main.class=javaapplication15.AllStarsTeamPlayers
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
